tdf#161338 Do not change variable cell when Goal Seek fails

When Goal Seek fails, N/A error is inserted in the cell even if the user chooses No in the message dialog.

Note that the solver definition in ScDocument::Solver forcefully inserts N/A when the solver fails, which seems to be usefull when creating scripts that use the Goal Seek. However, this behavior is not usefull when using the UI.

This patch restores the original value of the variable cell when Goal Seek fails.

Change-Id: I52d83b9de9b13667a81dd4a3ae8ab1c8545d6958
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168537
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Rafael Lima <rafael.palma.lima@gmail.com>
(cherry picked from commit d05f1ec2e20eb86ceb99e9ff5d4efb9ff9356dbb)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168722
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>